tests/BuildSystem/Build/errors.llbuild
# Don't try to build if there are input errors.
#
# RUN: rm -rf %t.build
# RUN: mkdir -p %t.build
# RUN: %{llbuild} buildsystem build --chdir %t.build --trace %t.trace %s > %t.out 2> %t.err
# RUN: %{FileCheck} --check-prefix CHECK --input-file %t.err %s
# RUN: %{FileCheck} --check-prefix CHECK-ERR --input-file %t.err %s
#
# CHECK-NOT: not-a-real-command

client:
  name: basic

targets:
  "": ["output"]

commands:
  dummy:
    tool: shell
    outputs: ["output"]
    args: not-a-real-command

# CHECK-ERR: errors.llbuild:[[@LINE+2]]:0: error: unexpected trailing top-level section
# CHECK-ERR: error: unable to load build file
this:
  is:
    an: error